src/retrieveCodeoutput/unpackaged/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>Average_Net_Score__c</fullName>
        <formula>Sum_of_Net_Score__c /  Number_of_exams__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Average Net Score</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Course_Role__c</fullName>
        <label>Course Role</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Course_Roles</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Level__c</fullName>
        <label>Level</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Maximum_Net_Score__c</fullName>
        <label>Maximum Net Score</label>
        <summarizedField>Exam_Instance__c.fNetScore_Pct__c</summarizedField>
        <summaryForeignKey>Exam_Instance__c.Test_Taker__c</summaryForeignKey>
        <summaryOperation>max</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Minimum_Net_Score__c</fullName>
        <label>Minimum Net Score</label>
        <summarizedField>Exam_Instance__c.fNetScore_Pct__c</summarizedField>
        <summaryForeignKey>Exam_Instance__c.Test_Taker__c</summaryForeignKey>
        <summaryOperation>min</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Number_of_exams__c</fullName>
        <label>Number of exams</label>
        <summaryForeignKey>Exam_Instance__c.Test_Taker__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sum_of_Net_Score__c</fullName>
        <label>Sum of Net Score</label>
        <summarizedField>Exam_Instance__c.fNetScore_Pct__c</summarizedField>
        <summaryForeignKey>Exam_Instance__c.Test_Taker__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>BirthdaysThisMonth</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.BIRTHDATE</field>
            <operation>equals</operation>
            <value>THIS_MONTH</value>
        </filters>
        <label>Birthdays This Month</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewLastWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>LAST_WEEK</value>
        </filters>
        <label>New Last Week</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>